--- a/package.json
+++ b/package.json
@@ -3,19 +3,36 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "jest",
+    "lint": "tsc",
+    "test": "node --loader ts-node/esm --enable-source-maps bin/test.ts",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
-    "build": "tsc"
+    "build": "node build",
+    "start": "node dist/index.js",
+    "dev:tsc": "tsc --watch --preserveWatchOutput",
+    "dev:node": "node --watch dist/index.js",
+    "dev:esbuild": "pnpm run build --watch",
+    "dev": "run-p dev:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.1",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "@japa/api-client": "2.0.0-1",
+    "@japa/expect": "3.0.0-1",
+    "@japa/expect-type": "^2.0.1",
+    "@japa/runner": "3.0.0-9",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.20",
+    "esbuild": "0.20.0",
+    "esbuild-plugin-d.ts": "^1.2.3",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "xstate": "^5.8.0"
   }
 }
