--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "domino-engine",
+  "name": "@pompidup/kingdomino-engine",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A simple engine for the game Kingdomino",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.js",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Pompidup/KDomino.git"
+  },
   "scripts": {
     "lint": "tsc",
-    "test": "node --loader ts-node/esm --enable-source-maps bin/test.ts",
-    "build": "node build",
+    "test": "vitest",
+    "coverage": "vitest --coverage --exclude=**/state/**", 
+    "build": "node build.js",
     "start": "node dist/index.js",
     "dev:tsc": "tsc --watch --preserveWatchOutput",
     "dev:node": "node --watch dist/index.js",
     "dev:esbuild": "pnpm run build --watch",
     "dev": "run-p dev:*"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "kingdomino",
+    "boardgame",
+    "engine",
+    "typescript"
+  ],
+  "author": "Pompidup",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Pompidup/KDomino/issues"
+  },
+  "homepage": "https://github.com/Pompidup/KDomino#readme",
   "devDependencies": {
-    "@japa/api-client": "2.0.0-1",
-    "@japa/expect": "3.0.0-1",
-    "@japa/expect-type": "^2.0.1",
-    "@japa/runner": "3.0.0-9",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
+    "@vitest/coverage-v8": "^1.3.1",
     "esbuild": "0.20.0",
     "esbuild-plugin-d.ts": "^1.2.3",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.3.1"
   },
   "dependencies": {
     "xstate": "^5.8.0"
