--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "lint": "tsc",
     "test": "vitest",
-    "coverage": "vitest --coverage --exclude=**/state/**", 
+    "coverage": "vitest --coverage --config ./vitest.config.ts", 
     "build": "node build.js",
     "start": "node dist/index.js",
     "dev:tsc": "tsc --watch --preserveWatchOutput",
