--- a/package.json
+++ b/package.json
@@ -17,11 +17,7 @@
     "test": "vitest",
     "coverage": "vitest --coverage --config ./vitest.config.ts", 
     "build": "node build.js",
-    "start": "node dist/index.js",
-    "dev:tsc": "tsc --watch --preserveWatchOutput",
-    "dev:node": "node --watch dist/index.js",
-    "dev:esbuild": "pnpm run build --watch",
-    "dev": "run-p dev:*"
+    "start": "node dist/index.js"
   },
   "keywords": [
     "kingdomino",
@@ -40,12 +36,8 @@
     "@vitest/coverage-v8": "^1.3.1",
     "esbuild": "0.20.0",
     "esbuild-plugin-d.ts": "^1.2.3",
-    "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
-  },
-  "dependencies": {
-    "xstate": "^5.8.0"
   }
 }
