--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@pompidup/kingdomino-engine",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A simple engine for the game Kingdomino",
-  "main": "./dist/index.cjs.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.js",
   "type": "module",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -15,9 +15,8 @@
   "scripts": {
     "lint": "tsc",
     "test": "vitest",
-    "coverage": "vitest --coverage --config ./vitest.config.ts", 
-    "build": "node build.js && tsc --emitDeclarationOnly --outDir dist",
-    "start": "node dist/index.js"
+    "coverage": "vitest --coverage --config ./vitest.config.ts",
+    "build": "tsup"
   },
   "keywords": [
     "kingdomino",
@@ -34,9 +33,8 @@
   "devDependencies": {
     "@types/node": "^20.11.20",
     "@vitest/coverage-v8": "^1.3.1",
-    "esbuild": "0.20.0",
-    "esbuild-plugin-d.ts": "^1.2.3",
     "ts-node": "^10.9.2",
+    "tsup": "^8.0.2",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
   }
