--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "lib": ["es2022"],
     "emitDeclarationOnly": true
   },
-  "include": ["./src/**/*", "bin"],
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
