--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ts-node": "^10.9.2",
     "tsup": "^8.2.4",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
